RbA Build/src/objects/Municipality__c.object
<CustomObject>
    <description>Holds Municipality information that will help with HOA, Historical and Permitting details.</description>
    <fields>
        <fullName>Application_Notes__c</fullName>
        <inlineHelpText>Notes about the Application process</inlineHelpText>
        <label>Application Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bond_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Building_Application_Type__c</fullName>
        <inlineHelpText>How can the application be submitted?</inlineHelpText>
        <label>Building Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City_Township__c</fullName>
        <label>City/Township</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Egress Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_ID__c</fullName>
        <description>Enabled+ ID for HOA/Historical</description>
        <externalId>true</externalId>
        <label>Enabled+ ID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>For_Retail_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>What Retail Location is this for?</inlineHelpText>
        <label>For Retail Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Municipalities</relationshipLabel>
        <relationshipName>Municipalities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_Board_Approval__c</fullName>
        <inlineHelpText>Is board Approval Required?</inlineHelpText>
        <label>Needs Board Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Permit_Fee_Notes__c</fullName>
        <inlineHelpText>Permit Fee Notes</inlineHelpText>
        <label>Permit Fee Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permit_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is a permit required?</inlineHelpText>
        <label>Permit Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>Sched Department Phone or Main Line</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Production_Notes__c</fullName>
        <label>Production Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Forms_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Forms Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Municipality</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>For_Retail_Location__c</columns>
        <columns>Permit_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>HOA</fullName>
        <columns>NAME</columns>
        <columns>State__c</columns>
        <columns>Application_Notes__c</columns>
        <columns>For_Retail_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Municipality__c.HOA</value>
        </filters>
        <label>HOA</label>
    </listViews>
    <listViews>
        <fullName>Historical</fullName>
        <columns>NAME</columns>
        <columns>City_Township__c</columns>
        <columns>State__c</columns>
        <columns>For_Retail_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Municipality__c.Historical</value>
        </filters>
        <label>Historical</label>
    </listViews>
    <listViews>
        <fullName>Permit</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Municipality__c.Permit</value>
        </filters>
        <label>Permit</label>
    </listViews>
    <listViews>
        <fullName>X77_Twin_Cities</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>For_Retail_Location__c</field>
            <operation>startsWith</operation>
            <value>77</value>
        </filters>
        <label>77 - Twin Cities</label>
    </listViews>
    <nameField>
        <label>Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Municipalities</pluralLabel>
    <recordTypes>
        <fullName>HOA</fullName>
        <active>true</active>
        <description>Homeowner Association Details</description>
        <label>HOA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Historical</fullName>
        <active>true</active>
        <description>Holds information on Historial requirements</description>
        <label>Historical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Permit</fullName>
        <active>true</active>
        <description>Hold information for Building Permits (not Building)</description>
        <label>Permit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>